--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -129,7 +129,7 @@
 			</select>
 		<br>
 		<br>
-		<button type="submit" class="btn btn-primary btn-lg btn-block" id="submit">Submit</button>
+		<button type="button" class="btn btn-primary btn-lg btn-block" id="submitButton">Submit</button>
 		<hr>
 		<footer>
 			<a href="/api/friends.js">API Friends List</a>
@@ -139,5 +139,45 @@
 		<br>
 		<br>
 	</div>
+
+	<script type="text/javascript">
+	
+$('#submitButton').on('click', function(event){
+	event.preventDefault();
+	var profile = {
+		q1: $('#q1').val().trim(),
+		q2: $('#q2').val().trim(),
+		q3: $('#q3').val().trim(),
+		q4: $('#q4').val().trim(),
+		q5: $('#q5').val().trim(),
+		q6: $('#q6').val().trim(),
+		q7: $('#q7').val().trim(),
+		q8: $('#q8').val().trim(),
+		q9: $('#q9').val().trim(),
+		q10: $('#q10').val().trim()
+	}
+	console.log(profile);
+		$.post('/public/survey', profile)
+		.done(function(data) {
+			console.log(data);
+		if (data === true) {
+			alert("Here's your friend")
+		} else if (data === false) {
+			alert("You have no friends")
+		};
+			$('#q1').val('')
+			$('#q2').val('')
+			$('#q3').val('')
+			$('#q4').val('')
+			$('#q5').val('')
+			$('#q6').val('')
+			$('#q7').val('')
+			$('#q8').val('')
+			$('#q9').val('')
+			$('#q10').val('')
+		})
+});
+</script>
+
 </body>
 </html>
