fixed routing issue

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -22,7 +22,7 @@
 			<h2>Then find a friend that is compatible!</h2>
 			<br>
 			<div>
-				<a href="survey.html">
+				<a href="survey">
 					<button type="button" class="btn btn-lg btn-primary">Go to Survey</button>
 				</a>
 			</div>
