homework submission but with errors

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -28,7 +28,7 @@
 			</div>
 		</div>
 		<footer>
-			<a href="../data/friends.js">API Friends List</a>
+			<a href="/api/friends">API Friends List</a>
 			 | 
 			<a href="https://github.com/sbiswas2/friendfinder">GitHub Repo</a>
 		</footer>
