--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -132,7 +132,7 @@
 		<button type="button" class="btn btn-primary btn-lg btn-block" id="submitButton">Submit</button>
 		<hr>
 		<footer>
-			<a href="../data/friends.js">API Friends List</a>
+			<a href="/api/friends">API Friends List</a>
 			 | 
 			<a href="https://github.com/sbiswas2/friendfinder">GitHub Repo</a>
 		</footer>
